tdf#47679 explicitly don't write fcharset2 for text in OpenSymbol

we don't convert to the charsets we claim the fonts are in when
we write our text so rtf imports mangle this dubious output.

cheapest thing is to just write default fcharset0 for OpenSymbol

Change-Id: Iea0e0d3a9bda5b5c7bcffba8499195f50e214aa4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142935
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit a4a865a85cfc922e75ed2ad5188e45a76bca92aa)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142930
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>